--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
+  "type": "module",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.19.2",
     "mongoose": "^8.4.1",
     "mongoose-delete": "^1.0.2"
