--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI= mongodb+srv://admin:ssHReUjcZM7I0e9J@sipidatabase.6qxipvo.mongodb.net/
+MONGODB_URI= mongodb+srv://admin:ssHReUjcZM7I0e9J@sipidatabase.6qxipvo.mongodb.net/DatabaseSIPI
 PORT= 8081
