--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "type": "module",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npx nodemon src/app.js"
+  },
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.19.2",
