--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "express": "^4.19.2",
     "mongoose": "^8.4.1",
     "mongoose-delete": "^1.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.3"
   }
 }
