--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx nodemon src/app.js"
+    "dev": "npx nodemon app.js"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
